fix social media footer on mobile

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -18,15 +18,29 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+
+                @include mq($until: tablet) {
+                    width: 50px;
+                    height: 50px;
+                    margin: 10px;
+                  }
             }
             img {
                 width: 50px;
+
+                @include mq($until: tablet) {
+                    width: 25px;
+                  }
             }
         }
 
         .facebook {
             img {
                 width: 40px;
+
+                @include mq($until: tablet) {
+                    width: 20px;
+                  }
             }
         }
     }
